Fix #32461: adjusting brush strength with shift+F in image editor would show the cursor too big when zoomed in. Only the size adjusment needs to follow the zoom level of the editor, others are fixed size.